# xrpc

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
src/: main.cpp
src/xrpc-core/: server.cpp  server.h
